# Simulador-de-Caravanas

./: Buffer.cpp  Buffer.h  CMakeLists.txt  Caravan.cpp  Caravan.h  City.cpp  City.h  Item.cpp  Item.h  Map.cpp  Map.h  README.md  Simulator.cpp  Simulator.h  main.cpp
reports/: README.md
